--- a/HumanStudentWorker/HumanStudentWorker.csproj
+++ b/HumanStudentWorker/HumanStudentWorker.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Human.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalesEmployee.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="TestHuman.cs" />
     <Compile Include="Worker.cs" />
